# Trip-Planner

./: Dockerfile.backend  Dockerfile.frontend  README.md  api_app.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: main.yml
my-trip-planner-app/: package-lock.json  package.json
my-trip-planner-app/src/: App.js  TripPlannerForm.js
output/: report.md
src/trip_planner/: crew.py  main.py
src/trip_planner/config/: agents.yaml  tasks.yaml
src/trip_planner/tools/: custom_tool.py
