[project]
name = "trip_planner"
version = "0.1.0"
description = "Trip_Planner using crewAI"
authors = [{ name = "Mourad Hamzaoui", email = "hamzaoui.mourad@outlook.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "unstructured>=0.18.5",
]

[project.scripts]
trip_planner = "trip_planner.main:run"
run_crew = "trip_planner.main:run"
train = "trip_planner.main:train"
replay = "trip_planner.main:replay"
test = "trip_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
